@startuml
!theme vibrant
title CloudInterview - Domain Model

' Aggregates
package "Interview Aggregate" {
  entity InterviewSession <<Aggregate Root>> {
    * sessionId: UUID
    * userId: string
    * mode: InterviewMode
    * jobType: string
    * difficulty: Difficulty
    --
    * status: InterviewStatus
    * createdAt: DateTime
    * startedAt: DateTime
    * completedAt: DateTime
    * duration: number (seconds)
    --
    currentQuestionIndex: number
    jobTitle: string
    jobDescription: string
    seniority: ExperienceLevel
  }
  
  entity InterviewQuestion <<Entity>> {
    * questionId: string
    * type: QuestionType
    * category: string
    * difficulty: Difficulty
    --
    * title: string
    * text: string
    estimatedTime: number
    --
    tags: string[]
    hints: string[]
    followUpQuestions: string[]
    --
    metadata: QuestionMetadata
  }
  
  entity InterviewAnswer <<Entity>> {
    * answerId: UUID
    * questionId: string
    * answerText: string
    * submittedAt: DateTime
    --
    code: string
    language: ProgrammingLanguage
    responseTime: number
    --
    completenessScore: number
    relevanceScore: number
    communicationScore: number
    --
    evaluation: Evaluation
  }
  
  entity AIResponse <<Entity>> {
    * responseId: UUID
    * sessionId: UUID
    * questionId: string
    --
    * type: AIResponseType
    * content: string
    * generatedAt: DateTime
    --
    sentiment: Sentiment
    confidence: number
    responseTime: number
    followUp: boolean
  }
  
  InterviewSession "1" *-- "1..*" InterviewQuestion : contains
  InterviewSession "1" *-- "0..*" InterviewAnswer : has
  InterviewSession "1" *-- "0..*" AIResponse : generates
}

package "Question Bank" {
  entity LeetCodeProblem <<Entity>> {
    * id: number
    * questionId: string
    * title: string
    * titleSlug: string
    --
    * difficulty: Difficulty
    * description: string
    --
    examples: Example[]
    constraints: string[]
    --
    metadata: ProblemMetadata
  }
  
  entity ProblemMetadata <<Value Object>> {
    category: string
    topics: string[]
    hints: string[]
    likes: number
    dislikes: number
    similar_questions: SimilarQuestion[]
  }
  
  LeetCodeProblem *-- ProblemMetadata
}

package "Feedback Aggregate" {
  entity InterviewFeedback <<Aggregate Root>> {
    * feedbackId: UUID
    * sessionId: UUID
    --
    * overallScore: number (0-100)
    * summary: string
    * generatedAt: DateTime
    --
    strengths: string[]
    improvementAreas: string[]
    specificRecommendations: string[]
    --
    recommendation: HiringDecision
  }
  
  entity Evaluation <<Value Object>> {
    correctness: number
    completeness: number
    style: number
    complexityAnalysis: string
    feedback: string
  }
  
  entity BehavioralAssessment <<Value Object>> {
    starQuality: number
    storytelling: number
    impactDemonstration: number
    selfAwareness: number
    feedback: string
  }
  
  InterviewFeedback "1" *-- "0..*" Evaluation
  InterviewFeedback "1" *-- "0..*" BehavioralAssessment
}

' Enumerations
enum InterviewMode {
  TECHNICAL
  BEHAVIORAL
  PRODUCT
  SYSTEM_DESIGN
}

enum InterviewStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum QuestionType {
  CODING
  BEHAVIORAL
  THEORETICAL
  SYSTEM_DESIGN
  PRODUCT_DESIGN
  SCENARIO
}

enum Difficulty {
  EASY
  MEDIUM
  HARD
}

enum ExperienceLevel {
  JUNIOR
  MID
  SENIOR
  STAFF
  PRINCIPAL
}

enum AIResponseType {
  ENCOURAGEMENT
  HINT
  CLARIFICATION
  FEEDBACK
  FOLLOW_UP
}

enum Sentiment {
  POSITIVE
  NEUTRAL
  NEGATIVE
}

enum HiringDecision {
  STRONG_HIRE
  HIRE
  LEANING_NO_HIRE
  NO_HIRE
}

' Relationships with Enums
InterviewSession --> InterviewMode
InterviewSession --> InterviewStatus
InterviewSession --> Difficulty
InterviewSession --> ExperienceLevel

InterviewQuestion --> QuestionType
InterviewQuestion --> Difficulty

AIResponse --> AIResponseType
AIResponse --> Sentiment

InterviewFeedback --> HiringDecision

' Cross-Aggregate References
InterviewAnswer ..> InterviewQuestion : references
AIResponse ..> InterviewQuestion : references
InterviewFeedback ..> InterviewSession : evaluates

note right of InterviewSession
  **Aggregate Root**
  - Manages interview lifecycle
  - Coordinates questions and answers
  - Enforces business rules
  - Persisted in Durable Objects
end note

note right of LeetCodeProblem
  **Repository Pattern**
  - Stored in Cloudflare KV
  - 3000+ problems available
  - Fetched by QuestionSelector
end note

note right of InterviewFeedback
  **Generated by AI**
  - Created at session end
  - Uses Llama 3.3 for analysis
  - Provides actionable insights
end note

@enduml
